--- a/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-gorm-model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-gorm-model.go.tmpl
@@ -1,14 +1,23 @@
 package models
 
-import "gorm.io/gorm"
+import (
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+)
 
 type {{.CapsResourceNameSingular}} struct {
 	gorm.Model
-    Id int64 `gorm:"primaryKey;autoIncrement" json:"ID,omitempty"`
+	ID uuid.UUID `gorm:"type:uuid;primaryKey;primaryKey"`
 {{range $k, $v := .Fields}}
-    {{if eq $k "Id"}}
+    {{if eq $k "ID"}}
     {{else}}
     {{AddForeignKeyIfCompositeField $k $v}}
     {{end}}
 {{end}}
+}
+
+// BeforeCreate hook to generate UUID before creating a record
+func (m *{{.CapsResourceNameSingular}}) BeforeCreate(tx *gorm.DB) error {
+	m.ID = uuid.New()
+	return nil
 }
