--- a/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
@@ -1,7 +1,7 @@
 package models
 
 type {{.CapsResourceNameSingular}} struct {
-    Id int64 `json:"id,omitempty"`
+    {{GetPrimaryKey}}
 {{range $k, $v := .Fields}}
     {{if eq $k "Id"}}
     {{else}}
