--- a/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-model.go.tmpl
@@ -1,9 +1,9 @@
 package models
 
 type {{.CapsResourceNameSingular}} struct {
-    Id int64 `json:"id,omitempty"`
+    {{GetPrimaryKey}}
     {{range $k, $v := .Fields}}
-        {{if eq $k "Id"}}
+        {{if eq $k "ID"}}
         {{else}}
             {{$k}} {{$v}} `json:"{{ToLowerCamelCase $k}},omitempty"`
         {{end}}
