--- a/frameworks/go-gin-server/pkg/rest/server/controllers/sqls-controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/sqls-controller.go.tmpl
@@ -10,6 +10,9 @@ import (
     "go.opentelemetry.io/otel/trace"
 	"net/http"
 	"os"
+{{if .IsIntID}}
+    "strconv"
+{{end}}
     "errors"
 )
 
@@ -65,11 +68,21 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 
 {{ if .IsRESTGetAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Fetch{{.CapsResourceNameSingular}}(context *gin.Context) {
+{{if .IsIntID}}
+   	id, err := strconv.ParseInt(context.Param("id"), 10, 64)
+   	if err != nil {
+   		log.Error(err)
+   		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+   		return
+   	}
+{{end}}
+{{if .IsStringID}}
     id := context.Param("id")
     if len(id) == 0 {
         context.JSON(http.StatusBadRequest, gin.H{"error": "id is required"})
         return
     }
+{{end}}
 	// trigger {{.SmallResourceNameSingular}} fetching
 	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
 	if err != nil {
@@ -87,7 +100,12 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
     if len(serviceName) > 0 && len(collectorURL) > 0 {
         // get the current span by the request context
         currentSpan := trace.SpanFromContext(context.Request.Context())
+    {{if .IsIntID}}
+        currentSpan.SetAttributes(attribute.String("{{.SmallResourceNameSingular}}.id", strconv.FormatInt({{.SmallResourceNameSingular}}.Id, 10)))
+    {{end}}
+    {{if .IsStringID}}
         currentSpan.SetAttributes(attribute.String("{{.SmallResourceNameSingular}}.id", {{.SmallResourceNameSingular}}.ID.String()))
+    {{end}}
     }
 
 	context.JSON(http.StatusOK, {{.SmallResourceNameSingular}})
@@ -104,12 +122,21 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 		return
 	}
 
+{{if .IsIntID}}
+	id, err := strconv.ParseInt(context.Param("id"), 10, 64)
+	if err != nil {
+		log.Error(err)
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+{{end}}
+{{if .IsStringID}}
     id := context.Param("id")
     if len(id) == 0 {
         context.JSON(http.StatusBadRequest, gin.H{"error": "id is required"})
         return
     }
-
+{{end}}
 	// trigger {{.SmallResourceNameSingular}} update
 	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(id, &input); err != nil {
 		log.Error(err)
@@ -127,12 +154,21 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 
 {{ if .IsRESTDeleteAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Delete{{.CapsResourceNameSingular}}(context *gin.Context) {
+{{if .IsIntID}}
+	id, err := strconv.ParseInt(context.Param("id"), 10, 64)
+	if err != nil {
+		log.Error(err)
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+{{end}}
+{{if .IsStringID}}
     id := context.Param("id")
     if len(id) == 0 {
         context.JSON(http.StatusBadRequest, gin.H{"error": "id is required"})
         return
     }
-
+{{end}}
 	// trigger {{.SmallResourceNameSingular}} deletion
 	if err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(id); err != nil {
 		log.Error(err)
