--- a/frameworks/go-gin-server/pkg/rest/server/daos/dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/dao.go.tmpl
@@ -35,7 +35,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
 {{ end }}
 
 {{ if .IsRESTGetAllowed }}
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id string) (*models.{{.CapsResourceNameSingular}}, error) {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}) (*models.{{.CapsResourceNameSingular}}, error) {
 	if {{.SmallResourceNameSingular}}, ok := {{.SmallResourceNamePlural}}[id]; ok {
 		return {{.SmallResourceNameSingular}}, nil
 	}
@@ -45,10 +45,23 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{
 {{ end }}
 
 {{ if .IsRESTPutAllowed }}
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id string, {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
-	if id != {{.SmallResourceNameSingular}}.Id {
-		return nil, errors.New("id and payload don't match")
-	}
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}, {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+{{if .IsIntID}}
+    if id == 0 {
+        return nil, errors.New("invalid {{.SmallResourceNameSingular}} ID")
+    }
+    if id != m.Id {
+        return nil, errors.New("id and payload don't match")
+    }
+{{end}}
+{{if .IsStringID}}
+    if len(id) < 1 {
+        return nil, errors.New("invalid {{.SmallResourceNameSingular}} ID")
+    }
+    if strings.EqualFold(id, m.ID.String()) {
+        return nil, errors.New("id and payload don't match")
+    }
+{{end}}
 	{{.SmallResourceNamePlural}}[{{.SmallResourceNameSingular}}.Id] = {{.SmallResourceNameSingular}}
 
 	return {{.SmallResourceNameSingular}}, nil
@@ -56,7 +69,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
 {{ end }}
 
 {{ if .IsRESTDeleteAllowed }}
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id string) error {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}) error {
 	if _, ok := {{.SmallResourceNamePlural}}[id]; ok {
 		delete({{.SmallResourceNamePlural}}, id)
 		return nil
