--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/mysql-gorm-dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/mysql-gorm-dao.go.tmpl
@@ -6,7 +6,9 @@ import (
 	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
     log "github.com/sirupsen/logrus"
     "gorm.io/gorm"
+{{if .IsStringID}}
     "strings"
+{{end}}
 )
 
 type {{.CapsResourceNameSingular}}Dao struct {
@@ -54,7 +56,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
 {{ end }}
 
 {{ if .IsGRPCGetAllowed }}
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id string) (*models.{{.CapsResourceNameSingular}}, error) {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}) (*models.{{.CapsResourceNameSingular}}, error) {
     var m *models.{{.CapsResourceNameSingular}}
     if err := {{.SmallResourceNameSingular}}Dao.db.Where("id = ?", id).First(&m).Error; err != nil {
         log.Debugf("failed to get {{.SmallResourceNameSingular}}: %v", err)
@@ -69,13 +71,23 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{
 {{ end }}
 
 {{ if .IsGRPCPutAllowed }}
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id string, m *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}, m *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+{{if .IsIntID}}
+    if id == 0 {
+        return nil, errors.New("invalid {{.SmallResourceNameSingular}} ID")
+    }
+    if id != m.Id {
+        return nil, errors.New("id and payload don't match")
+    }
+{{end}}
+{{if .IsStringID}}
     if len(id) < 1 {
         return nil, errors.New("invalid {{.SmallResourceNameSingular}} ID")
     }
     if strings.EqualFold(id, m.ID.String()) {
         return nil, errors.New("id and payload don't match")
     }
+{{end}}
 
     var {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}
     if err := {{.SmallResourceNameSingular}}Dao.db.Where("id = ?", id).First(&{{.SmallResourceNameSingular}}).Error; err != nil {
@@ -96,7 +108,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
 {{ end }}
 
 {{ if .IsGRPCDeleteAllowed }}
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id string) error {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}) error {
     var m *models.{{.CapsResourceNameSingular}}
     if err := {{.SmallResourceNameSingular}}Dao.db.Where("id = ?", id).Delete(&m).Error; err != nil {
         log.Debugf("failed to delete {{.SmallResourceNameSingular}}: %v", err)
